--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -37,7 +37,7 @@
 
 	<body>
 		<div id="info">
-			<a href="http://threejs.org" target="_blank">three.js</a> - webgl pathtracing example<br />
+			<a href="http://threejs.org" target="_blank">three.js</a> - webgl pathtracing sandbox<br />
 			by <a href="https://github.com/gam0022" target="_blank">gam0022</a> (<a href="http://qiita.com/gam0022/items/9875480d33e03fe2113c" target="_blank">article in Japanese</a>)
 		</div>
 
