intersectInfinitePlane は無かったことにした

--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -130,16 +130,9 @@ struct Sphere {
 	Material material;
 };
 
-struct InfinitePlane {
-	vec3 position;
-	vec3 normal;
-	Material material;
-};
-
 struct Plane {
 	vec3 position;
 	vec3 normal;
-	vec2 size;
 	Material material;
 };
 
@@ -290,7 +283,7 @@ void intersectDistanceFucntion( inout Intersection intersection, Ray ray, Materi
 	}
 }
 
-void intersectInfinitePlane( inout Intersection intersection, Ray ray, InfinitePlane plane ){
+void intersectPlane( inout Intersection intersection, Ray ray, Plane plane ){
     float d = -dot( plane.position, plane.normal );
     float v = dot( ray.direction, plane.normal );
     float t = -( dot( ray.origin, plane.normal ) + d ) / v;
@@ -298,25 +291,6 @@ void intersectInfinitePlane( inout Intersection intersection, Ray ray, InfiniteP
 	if( t > EPS && t < intersection.distance ) {
 		intersection.hit = true;
 		intersection.position = ray.origin + ray.direction * t;
-		intersection.normal = plane.normal;
-		intersection.distance = t;
-		intersection.material = plane.material;
-	}
-}
-
-void intersectPlane( inout Intersection intersection, Ray ray, Plane plane ){
-    float d = -dot( plane.position, plane.normal );
-    float v = dot( ray.direction, plane.normal );
-    float t = -( dot( ray.origin, plane.normal ) + d ) / v;
-
-	vec3 position = ray.origin + ray.direction * t;
-	vec3 diff = position - plane.position;
-
-	if( t > EPS && t < intersection.distance &&
-		// TODO: normal に直行する成分だけを抜き出したい
-		abs( diff.x ) <= plane.size.x && abs( diff.z ) <= plane.size.y ) {
-		intersection.hit = true;
-		intersection.position = position;
 		intersection.normal = plane.normal;
 		intersection.distance = t;
 		intersection.material = plane.material;
@@ -381,13 +355,12 @@ void intersectAABB( inout Intersection intersection, Ray ray, AABB aabb ){
 }
 
 void intersectScene( inout Intersection intersection, inout Ray ray ) {
-	//Plane plane;
-	//plane.material.type = MATERIAL_TYPE_DIFFUSE;
-	//plane.material.color = vec3( 0.9 );
-	//plane.material.emission = vec3( 0.0 );
-	//plane.position = vec3( 0.0, 0.0, 0.0 );
-	//plane.size = vec2( 5.0 );
-	//plane.normal = vec3( 0.0, 1.0, 0.0 );
+	Plane plane;
+	plane.material.type = MATERIAL_TYPE_DIFFUSE;
+	plane.material.color = vec3( 0.9 );
+	plane.material.emission = vec3( 0.0 );
+	plane.position = vec3( 0.0, 0.0, 0.0 );
+	plane.normal = vec3( 0.0, 1.0, 0.0 );
 	//intersectPlane( intersection, ray, plane );
 
 	AABB aabb;
