--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -645,24 +645,10 @@ void main(void) {
 			}
 
 
-			function initDynamicObjects() {
+			function createDynamicObjects() {
 				initTexture  = createDataTexture( canvas.width, canvas.height );
 				readBuffer  = createRenderTarget( canvas.width, canvas.height );
 				writeBuffer = readBuffer.clone();
-
-				// render quad
-				renderQuad = createQuadScene( {
-					uniforms: {
-						resolution: { type: 'v2', value: new THREE.Vector2( canvas.width, canvas.height ) },
-						frame: { type: 'i', value: frame },
-						buffer: { type: 't', value: writeBuffer.texture },
-					},
-					vertexShader: document.getElementById( 'vertex_shader' ).textContent,
-					fragmentShader: document.getElementById( 'render_fragment_shader' ).textContent,
-				} );
-
-				// EditorScene
-				editor = new SceneEditor( camera, canvas, renderQuad.scene );
 
 				// float quad
 				floatQuad = createQuadScene( {
@@ -738,9 +724,6 @@ void main(void) {
 					return;
 				}
 
-				// SceneEditor
-				//editor = new SceneEditor();
-
 
 				// OrbitControls
 				orbitControls = new THREE.OrbitControls( camera, canvas );
@@ -776,8 +759,23 @@ void main(void) {
 
 
 				initTextureCube();
-				onWindowResize();
 
+				// RenderQuad
+				renderQuad = createQuadScene( {
+					uniforms: {
+						resolution: { type: 'v2', value: new THREE.Vector2( canvas.width, canvas.height ) },
+						frame: { type: 'i', value: frame },
+						buffer: { type: 't', value: null },
+					},
+					vertexShader: document.getElementById( 'vertex_shader' ).textContent,
+					fragmentShader: document.getElementById( 'render_fragment_shader' ).textContent,
+				} );
+
+
+				// EditorScene
+				editor = new SceneEditor( camera, canvas, renderQuad.scene );
+
+				onWindowResize();
 				window.addEventListener( 'resize', onWindowResize, false );
 			}
 
@@ -794,7 +792,7 @@ void main(void) {
 				camera.updateProjectionMatrix();
 
 				renderer.setSize( canvas.width, canvas.height );
-				initDynamicObjects();
+				createDynamicObjects();
 				frame = 0;
 			}
 
