--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -583,6 +583,9 @@ void main(void) {
 				},
 				resolution: '512',
 
+				transformMode: function() {
+					editor.toggleTransformMode();
+				},
 				roughness: 0.2,
 				refractiveIndex: 1.6,
 			};
@@ -738,6 +741,7 @@ void main(void) {
 					onWindowResize();
 				} );
 
+				gui.add( config, 'transformMode' ).name( "Translate/Scale" );
 				gui.add( config, 'roughness', 0.0, 1.0 ).name( 'Roughness' ).onChange( function( value ) {
 					frame = 0;
 				} );
@@ -771,10 +775,10 @@ void main(void) {
 				editor.transformControls.addEventListener('mouseUp', function( e ) {
 				});
 				editor.transformControls.addEventListener('change', function( e ) {
-					createDynamicObjects();
-					frame = 0;
 				});
 				editor.transformControls.addEventListener('objectChange', function( e ) {
+					createDynamicObjects();
+					frame = 0;
 				});
 
 				onWindowResize();
