--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -74,11 +74,6 @@ uniform mat4 cameraViewProjectionpMatrixInverse;
 uniform float cameraNear;
 uniform float cameraFar;
 
-// material params
-uniform float gRoughness;
-uniform float gRefractiveIndex;
-
-
 // consts
 const float INF = 1e+10;
 const float EPS = 1e-4;
@@ -106,6 +101,8 @@ struct Material {
 	int type;
 	vec3 color;
 	vec3 emission;
+	float roughness;
+	float refractiveIndex;
 };
 #define MATERIAL_TYPE_DIFFUSE 0
 #define MATERIAL_TYPE_SPECULAR 1
@@ -447,12 +444,10 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce, f
 		} else if ( intersection.material.type == MATERIAL_TYPE_SPECULAR ) {
 			ray.direction = reflect( ray.direction, intersection.normal );
 		} else if ( intersection.material.type == MATERIAL_TYPE_REFRACTION ) {
-			float refractiveIndex = 1.6;
-			float invRefractiveIndex = 1.0 / refractiveIndex;
 			vec3 rayDirection = ray.direction;
 			bool isIncoming = dot( rayDirection, intersection.normal ) < 0.0;
 			vec3 orientingNormal = isIncoming ? intersection.normal : -intersection.normal;
-			ray.direction = refract( rayDirection, orientingNormal, isIncoming ? invRefractiveIndex : refractiveIndex );
+			ray.direction = refract( rayDirection, orientingNormal, isIncoming ? 1.0 / intersection.material.refractiveIndex : intersection.material.refractiveIndex );
 			if ( ray.direction == vec3( 0.0 ) ) {
 				// 完全反射のケース
 				ray.direction = reflect( rayDirection, orientingNormal );
@@ -462,7 +457,7 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce, f
 		} else if ( intersection.material.type == MATERIAL_TYPE_GGX ) {
 			vec3 N = intersection.normal;
 			vec3 V = -ray.direction;
-			vec3 H = importanceSampleGGX( Xi, gRoughness, N );
+			vec3 H = importanceSampleGGX( Xi, intersection.material.roughness, N );
 			vec3 L = reflect( ray.direction, H );
 			//vec3 L = 2.0 * dot( V, H ) * H - V;
 
@@ -472,7 +467,7 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce, f
 			float VoH = saturate( dot( V, H ) );// x x
 
 			if( NoL > 0.0 ) {
-				float G = GGX_G( gRoughness, NoV, NoL );
+				float G = GGX_G( intersection.material.roughness, NoV, NoL );
 				float Fc = pow( 1.0 - VoH, 5.0 );
 				vec3 F = (1.0 - Fc) * SpecularColor + Fc;
 				intersection.material.color *= F * G * VoH / ( NoH * NoV );
@@ -480,14 +475,12 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce, f
 
 			ray.direction = L;
 		} else if ( intersection.material.type == MATERIAL_TYPE_GGX_REFRACTION ) {
-			vec3 H = importanceSampleGGX( Xi, gRoughness, intersection.normal );
+			vec3 H = importanceSampleGGX( Xi, intersection.material.roughness, intersection.normal );
 
-			float refractiveIndex = gRefractiveIndex;
-			float invRefractiveIndex = 1.0 / refractiveIndex;
 			vec3 rayDirection = ray.direction;
 			bool isIncoming = dot( rayDirection, intersection.normal ) < 0.0;
 			vec3 orientingNormal = isIncoming ? H : -H;
-			ray.direction = refract( rayDirection, orientingNormal, isIncoming ? invRefractiveIndex : refractiveIndex );
+			ray.direction = refract( rayDirection, orientingNormal, isIncoming ? 1.0 / intersection.material.refractiveIndex : intersection.material.refractiveIndex );
 			if ( ray.direction == vec3( 0.0 ) ) {
 				// 完全反射のケース
 				ray.direction = reflect( rayDirection, orientingNormal );
@@ -590,8 +583,8 @@ void main(void) {
 
 				// Material
 				materialType: "MATERIAL_TYPE_DIFFUSE",
-				roughness: 0.2,
-				refractiveIndex: 1.6,
+				materialRoughness: 0.2,
+				materialRefractiveIndex: 1.6,
 			};
 
 			init();
@@ -671,9 +664,6 @@ void main(void) {
 						cameraViewProjectionpMatrixInverse: { type: 'm4', value: new THREE.Matrix4() },
 						cameraNear: { type: 'f', value: camera.near },
 						cameraFar:  { type: 'f', value: camera.far },
-
-						gRoughness: { type: 'f', value: config.roughness },
-						gRefractiveIndex: { type: 'f', value: config.refractiveIndex },
 					},
 					vertexShader: document.getElementById( 'vertex_shader' ).textContent,
 					fragmentShader: editor.createFragmentShader(),
@@ -767,10 +757,26 @@ void main(void) {
 					createDynamicObjects();
 					frame = 0;
 				} );
-				selectedObjectFolder.add( config, 'roughness', 0.0, 1.0 ).name( 'Roughness' ).onChange( function( value ) {
+
+				selectedObjectFolder.add( config, 'materialRoughness', 0.0, 1.0 ).name( 'Roughness' ).onChange( function( value ) {
+					if ( !editor.transformControls.object ) {
+						alert( "先に Object を選択してください" );
+						return;
+					}
+
+					editor.transformControls.object.userData.material.roughness = value;
+					createDynamicObjects();
 					frame = 0;
 				} );
-				selectedObjectFolder.add( config, 'refractiveIndex', 0.0, 2.0 ).name( 'Refractive Index' ).onChange( function( value ) {
+
+				selectedObjectFolder.add( config, 'materialRefractiveIndex', 0.0, 2.0 ).name( 'Refractive Index' ).onChange( function( value ) {
+					if ( !editor.transformControls.object ) {
+						alert( "先に Object を選択してください" );
+						return;
+					}
+
+					editor.transformControls.object.userData.material.refractiveIndex = value;
+					createDynamicObjects();
 					frame = 0;
 				} );
 				selectedObjectFolder.open();
@@ -869,9 +875,6 @@ void main(void) {
 						floatQuad.material.uniforms.cameraNear.value = camera.near;
 						floatQuad.material.uniforms.cameraFar.value  = camera.far;
 					}
-					floatQuad.material.uniforms.gRoughness.value = config.roughness;
-					floatQuad.material.uniforms.gRefractiveIndex.value = config.refractiveIndex;
-
 					renderer.render( floatQuad.scene, camera, writeBuffer );
 				}
 
