--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -564,8 +564,8 @@ void main(void) {
 			var container, stats;
 			var camera, renderer;
 			var orbitControls, prevCameraMatrixWorld;
-			var renderQuad, textureCube;
-			var floatQuad, initTexture, readBuffer, writeBuffer;
+			var textureCubes;
+			var renderQuad, floatQuad, initTexture, readBuffer, writeBuffer;
 			var frame = 0;
 			var editor;
 
@@ -577,6 +577,7 @@ void main(void) {
 				resolution: '512',
 
 				// Object
+				envmap: 'pisa',
 				transformMode: function() {
 					editor.toggleTransformMode();
 				},
@@ -672,7 +673,7 @@ void main(void) {
 						time: { type: 'f', value: 0.0 },
 						frame: { type: 'i', value: frame },
 						buffer: { type: 't', value: readBuffer.texture },
-						cubeMap: { type: 'tc', value: textureCube },
+						cubeMap: { type: 'tc', value: textureCubes[config.envmap] },
 
 						cameraWorldMatrix: { type: 'm4', value: camera.matrixWorld },
 						cameraProjectionMatrixInverse: { type: 'm4', value: new THREE.Matrix4().getInverse( camera.projectionMatrix ) },
@@ -686,19 +687,30 @@ void main(void) {
 			}
 
 			function initTextureCube() {
+				textureCubes = {};
+				var cubeTextureLoader = new THREE.CubeTextureLoader();
+
 				var r = "textures/cube/Bridge2/";
-				var urls = [ r + "posx.jpg", r + "negx.jpg",
+				var urls = [
+					r + "posx.jpg", r + "negx.jpg",
 					r + "posy.jpg", r + "negy.jpg",
-					r + "posz.jpg", r + "negz.jpg" ];
-
-				var r = "textures/cube/pisa/";
-				var urls = [ r + "px.png", r + "nx.png",
-					r + "py.png", r + "ny.png",
-					r + "pz.png", r + "nz.png" ];
-
-				textureCube = new THREE.CubeTextureLoader().load( urls );
+					r + "posz.jpg", r + "negz.jpg",
+				];
+				var textureCube = cubeTextureLoader.load( urls );
 				textureCube.format = THREE.RGBFormat;
 				textureCube.mapping = THREE.CubeReflectionMapping;
+				textureCubes.bridge = textureCube;
+
+				r = "textures/cube/pisa/";
+				urls = [
+					r + "px.png", r + "nx.png",
+					r + "py.png", r + "ny.png",
+					r + "pz.png", r + "nz.png",
+				];
+				textureCube = cubeTextureLoader.load( urls );
+				textureCube.format = THREE.RGBFormat;
+				textureCube.mapping = THREE.CubeReflectionMapping;
+				textureCubes.pisa = textureCube;
 			}
 
 			function initGUI() {
@@ -708,13 +720,18 @@ void main(void) {
 					onWindowResize();
 				} );
 
+				// Scene Edit
 				var sceneEditFolder = gui.addFolder( "Scene Edit" );
+				sceneEditFolder.add( config, 'envmap', [ "bridge", "pisa" ] ).name( 'EnvMap' ).onChange( function( value ) {
+					floatQuad.material.uniforms.cubeMap.value = textureCubes[value];
+					frame = 0;
+				} );
 				sceneEditFolder.add( config, 'transformMode' ).name( "Translate/Scale" );
 				sceneEditFolder.add( config, 'addSphere' ).name( "Add Sphere" );
 				sceneEditFolder.add( config, 'addBox' ).name( "Add Box" );
 				sceneEditFolder.open();
 
-				// Object
+				// Selected Object
 				var selectedObjectFolder = gui.addFolder( "Selected Object" );
 				selectedObjectFolder.add( config, 'materialType', [
 					"MATERIAL_TYPE_DIFFUSE",
@@ -819,8 +836,7 @@ void main(void) {
 				editor.transformControls.addEventListener('change', function( e ) {
 				});
 				editor.transformControls.addEventListener('objectChange', function( e ) {
-					createDynamicObjects();
-					frame = 0;
+					editor.update();
 				});
 
 				onWindowResize();
@@ -840,8 +856,7 @@ void main(void) {
 				camera.updateProjectionMatrix();
 
 				renderer.setSize( canvas.width, canvas.height );
-				createDynamicObjects();
-				frame = 0;
+				editor.update();
 			}
 
 			function animate( timestamp ) {
@@ -853,7 +868,7 @@ void main(void) {
 
 				stats.begin();
 
-				// Orbitcontrols
+				// OrbitControls
 				orbitControls.update();
 				if ( camera && prevCameraMatrixWorld && !camera.matrixWorld.equals( prevCameraMatrixWorld ) ) {
 					frame = 0;
